Ajouter page index par branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Welcom To our WebSite</h2>
+    <ul>
+        <li>Ahmed Reda</li>
+        <li>Ahmed Reda</li>
+        <li>Ahmed Reda</li>
+    </ul>
+
+
 </body>
 </html>
